# xidown

./: .gitignore  Cargo.toml  LICENSE  README.md  cookies.json  download_list.txt
.github/workflows/: rust.yml
biliup/: Cargo.toml
src/: get_download_list.rs  get_video_list.rs  main.rs  upload_api.rs  upload_video.rs
