[package]
name = "xidown"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
biliup = "0.1.11"
bytes = "1.1.0"
futures = "0.3.17"
indicatif = "0.17.0-rc"
reqwest = { version = "0.11", features = ["blocking","stream","json"] }
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
zeroize = "1.4.3"
thiserror = "1.0"
cookie = "0.15.1"
log = "0.4.22"
env_logger = "0.11.5"
threadpool = "1.8.1"
curl = "0.4.46"
chrono = "0.4.38"
BiliupApi = "0.1.4"
xmtv_api = "0.1.6"
async_executors = { version = "0.7.0", features = ["threadpool"] }
rayon = "1.10.0"
scoped_threadpool = "0.1.9"
