[package]
name = "xidown"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
indicatif = "0.17.0-rc"
reqwest = { version = "0.11", features = ["blocking","stream","json"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
log = "0.4.22"
threadpool = "1.8.1"
BiliupApi = "0.1.4"
xmtv_api = "0.1.6"
env_logger = "0.11.5"
